[iOS] Fix internal builds after r276325 https://bugs.webkit.org/show_bug.cgi?id=224896

Reviewed by Tim Horton.

Source/WebKit:

* UIProcess/ios/forms/WKDateTimeInputControl.mm:
(-[WKDateTimePickerViewController datePickerInsets]):
(-[WKDateTimePicker _contextMenuInteraction:styleForMenuWithConfiguration:]):

Source/WTF:

* wtf/PlatformHave.h:


Canonical link: https://commits.webkit.org/236870@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276395 268f45cc-cd09-0410-ab3c-d52691b4dbfc